<resources>
    <string name="app_name">Leash</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="events">Events</string>
    <string name="pets">Pets</string>
    <string name="profile">Profile</string>
    <string name="pets_detail_events">Events</string>
    <string name="pets_detail_reminders">Reminders</string>
    <string name="pets_edit_name_hint">Name</string>
    <string name="pets_edit_name">Pet Name</string>
    <string name="pets_edit_birthdate_hint">Jan 1 2022</string>
    <string name="pets_edit_birthdate">Birthdate</string>
    <string name="pets_edit_pet_type_hint">Pet Type</string>
    <string name="pets_edit_pet_type">Pet Type</string>
    <string name="pets_edit_save_button">Save</string>
    <string name="events_edit_event_type">Event Type</string>
    <string name="events_edit_name_hint">Name for Event</string>
    <string name="events_edit_name">Name</string>
    <string name="events_edit_time_hint">12:00AM</string>
    <string name="events_edit_time">Time of Event</string>
    <string name="events_edit_alert">Alert Notifications</string>
    <string name="events_edit_recurrence">Recurrence</string>
    <string name="events_edit_pet_type_hint">None</string>
    <string name="events_edit_pet_type">Pet</string>
    <string name="events_edit_save_button">Save</string>
    <string name="events_edit">Edit Event</string>
    <string name="pets_create">Create Pet</string>
    <string name="pets_edit">Edit Pet</string>
    <string name="pets_detail">Pet Detail</string>
    <string name="profile_edit_text_hint">Name</string>
    <string name="edit_profile_save_button">SAVE</string>
    <string name="loading">Loading...</string>
    <string name="title_splash">Splash</string>
    <string-array name="event_type_array">
        <item>Reminder</item>
        <item>Event</item>
    </string-array>
    <string-array name="alert_array">
        <item>None</item>
        <item>5 mins before</item>
        <item>15 mins before</item>
        <item>30 mins before</item>
        <item>1 hours before</item>
        <item>2 hours before</item>
        <item>3 hours before</item>
        <item>5 hours before</item>
    </string-array>
    <string-array name="recurrence_array">
        <item>None</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Bi-Weekly</item>
        <item>Tri-Weekly</item>
        <item>Monthly</item>
        <item>Annually</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="created_account_mm_dd_yyyy">Created account: MM/DD/YYYY</string>
    <string name="events_create">Create Event</string>
    <string name="events_edit_delete_button">delete</string>
    <string name="pets_edit_delete_button">delete</string>
    <string name="logout_button">LOGOUT</string>
    <string name="pet_image_description">Pet Image</string>
    <string name="upload_photo">Upload Photo</string>
</resources>