<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_events">

    <fragment
        android:id="@+id/navigation_events"
        android:name="edu.rosehulman.leash.ui.EventsFragment"
        android:label="@string/events"
        tools:layout="@layout/fragment_events" />

    <fragment
        android:id="@+id/navigation_events_edit"
        android:name="edu.rosehulman.leash.ui.EventsEditFragment"
        android:label="@string/events_edit"
        tools:layout="@layout/fragment_events_edit" />

    <fragment
        android:id="@+id/navigation_pets"
        android:name="edu.rosehulman.leash.ui.PetsFragment"
        android:label="@string/pets"
        tools:layout="@layout/fragment_pets" />

    <fragment
        android:id="@+id/navigation_pets_edit"
        android:name="edu.rosehulman.leash.ui.PetsEditFragment"
        android:label="@string/pets_edit"
        tools:layout="@layout/fragment_pets_edit" />

    <fragment
        android:id="@+id/navigation_pets_detail"
        android:name="edu.rosehulman.leash.ui.PetsDetailFragment"
        android:label="@string/pets_detail"
        tools:layout="@layout/fragment_pets_detail" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="edu.rosehulman.leash.ui.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
</navigation>