<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/Foxtrot"
    >

    <TextView
        android:id="@+id/pet_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:text="Pet"
        android:textAlignment="center"
        android:textColor="@color/Golf"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/name_editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/pets_edit_name_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:backgroundTint="@color/Hotel"
        android:textColorHint="@color/Bravo"/>

    <TextView
        android:id="@+id/name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_editText"
        android:layout_alignLeft="@id/name_editText"
        android:text="@string/pets_edit_name"
        android:textColor="@color/Hotel"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/birthdate_editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/pets_edit_birthdate_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:backgroundTint="@color/Hotel"
        android:textColorHint="@color/Bravo"/>

    <TextView
        android:id="@+id/birthdate_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthdate_editText"
        android:layout_alignLeft="@id/birthdate_editText"
        android:text="@string/pets_edit_birthdate"
        android:textColor="@color/Hotel"
        android:textSize="20sp"
        />

    <EditText
        android:id="@+id/pet_type_editText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/birthdate_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/Hotel"
        android:fontFamily="@font/open_sans_light"
        android:hint="@string/pets_edit_pet_type_hint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/Bravo" />

    <TextView
        android:id="@+id/pet_type_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_type_editText"
        android:layout_alignLeft="@id/pet_type_editText"
        android:text="@string/pets_edit_pet_type"
        android:textColor="@color/Hotel"
        android:textSize="20sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pet_type_textView"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/Golf"
        android:text="@string/pets_edit_create_button"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <!-- Series of Paw Print Icons for Decoration -->
    <ImageView
        android:id="@+id/paw_icon1"
        style="@style/pawPrints"
        app:tint="@color/black"
        android:layout_alignRight="@id/pet_header"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:rotation="185" />

    <ImageView
        android:id="@+id/paw_icon2"
        style="@style/pawPrints"
        app:tint="@color/black"
        android:layout_alignRight="@id/pet_header"
        android:layout_marginTop="30dp"
        android:layout_marginRight="60dp"
        android:rotation="215" />

    <ImageView
        android:id="@+id/paw_icon3"
        style="@style/pawPrints"
        app:tint="@color/black"
        android:layout_alignRight="@id/pet_header"
        android:layout_marginTop="60dp"
        android:layout_marginRight="30dp"
        android:rotation="195"/>

    <ImageView
        android:id="@+id/paw_icon4"
        style="@style/pawPrints"
        app:tint="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="25dp"
        android:rotation="5" />

    <ImageView
        android:id="@+id/paw_icon5"
        style="@style/pawPrints"
        app:tint="@color/black"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="60dp"
        android:rotation="35" />

    <ImageView
        android:id="@+id/paw_icon6"
        style="@style/pawPrints"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="30dp"
        android:layout_marginBottom="60dp"
        android:rotation="15"
        app:tint="@color/black" />




</RelativeLayout>