<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProfileEditFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="375dp"
        android:layout_height="match_parent"
        app:cardCornerRadius="25dp"
        android:layout_marginTop="75dp"
        android:layout_centerInParent="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <ImageView
                android:id="@+id/background_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/Golf" />

            <ImageView
                android:id="@+id/profile_image"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="75dp"
                android:background="@color/Foxtrot"
                android:src="@drawable/ic_baseline_person_24" />

            <ImageView
                android:id="@+id/edit_imageView"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:contentDescription="Image"
                android:src="@drawable/ic_baseline_edit_24"
                app:tint="@color/white" />

            <EditText
                android:id="@+id/profile_name_editText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_image"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="25dp"
                android:textAlignment="center"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="@color/Bravo"
                android:textSize="50sp"
                android:textStyle="bold"
                android:text="@string/name"
                android:backgroundTint="@color/Hotel"
                android:hint="@string/profile_edit_text_hint"
                android:importantForAutofill="no" />

            <TextView
                android:id="@+id/account_creation_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/profile_name_editText"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:text="@string/created_account_mm_dd_yyyy"
                android:fontFamily="@font/open_sans_light"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/save_profile_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/account_creation_date_text"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/Foxtrot"
                android:text="@string/edit_profile_save_button"
                android:textColor="@color/white"
                android:textSize="20sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>